fix: Separate card actions by gap instead of margin on the actions.

--- a/packages/vue-forms/src/styles/main.scss
+++ b/packages/vue-forms/src/styles/main.scss
@@ -380,6 +380,7 @@
     padding-top: 1.25rem;
     display: flex;
     justify-content: flex-end;
+    gap: 0.75rem;
     button {
       cursor: pointer;
       font-weight: 500;
@@ -403,7 +404,6 @@
         color: #fff;
         display: inline-flex;
         justify-content: center;
-        margin-left: 0.75rem;
         border-color: transparent;
         &:not(.loading):hover {
           background-color: var(--tf-btn-confirm-disabled-bg);
